tests/NormalTests/paczka1/small_fuzzy/73271376.err
Error in line 1: 0ujzKrW S681 19,8
Error in line 6: umi2lY1n S980 74,0
Error in line 16: d8TLl\t6 S980 37,6
